# Vision.rs

./: .gitignore  README.md
RF-DETR/: Cargo.toml  README.md  build.rs
RF-DETR/assets/labels/: coco-labels-91.txt
RF-DETR/proto/: result.proto
RF-DETR/src/: cli.rs  grpc.rs  helpers.rs  lib.rs  main.rs  mapping.rs  model.rs  postprocess.rs  preprocess.rs  service.rs
YOLOv8-ONNXRuntime-Rust/: Cargo.toml  build.rs
YOLOv8-ONNXRuntime-Rust/proto/: result.proto
YOLOv8-ONNXRuntime-Rust/src/: cli.rs  converter.rs  lib.rs  main.rs  ort_backend.rs  utils.rs  yolo_service.rs
YOLOv8-ONNXRuntime-Rust/tests/: image_client.py  video_client.py
yolov8_train/: Cargo.toml
yolov8_train/src/: bbox_loss.rs  bottleneck.rs  c2f.rs  conv.rs  dfl.rs  head.rs  model.rs  sppf.rs
